--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,25 @@ isort = "^5.13.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
+pytest-cov = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 119
+exclude = """.git"""
+
+[tool.isort]
+line_length = 119
+
+[tool.mypy]
+disallow_untyped_defs = true
+no_implicit_optional = true
+warn_return_any = true
+check_untyped_defs = true
+exclude = 'venv'
+
+[tool.pytest.ini_options]
+addopts = "--cov --cov-report term-missing"
